--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="homeSection">
         <div>
-            <img src="img/firstImg.png" alt="Book Concept | home" class="img-fluid">
+            <img src="img/firstImg.png" alt="Book Concept | home" class="img-fluid topImg">
             <div class="homeSection-text">
                 <div class="container">
                     <div class="row">
@@ -254,32 +254,32 @@
                 <div class="baloonsText">
                     <h2>Great benifits by reading <br>regulary with Us</h2>
                     <div class="row">
-                        <div class="col-xs col-sm-4 col-md-6 baloonsRight">
+                        <div class="col-sm-4 col-md-4 col-lg-6 baloonsRight">
                             <img src="img/logo_brain.png" alt="Book Concept | Benefits" height="70"
                                 class="pb-3 loremImg">
                             <p class="text-uppercase font-weight-bold">lorem ipsum</p>
                         </div>
-                        <div class="col-sm-4 col-md-6 baloonsLeft">
+                        <div class="col-sm-4 col-md-4 col-lg-6 baloonsLeft">
                             <img src="img/logo_pen.png" alt="Book Concept | Benefits" height="70"
                                 class="pb-3 loremImgD">
                             <p class="text-uppercase font-weight-bold">lorem ipsum</p>
                         </div>
 
-                        <div class="col-sm-4 col-md-6 baloonsRight">
+                        <div class="col-sm-4 col-md-4 col-lg-6 baloonsRight">
                             <img src="img/logo_mas.png" alt="Book Concept | Benefits" height="70" class="pb-3 loremImg">
                             <p class="text-uppercase font-weight-bold text-weight-bold">lorem ipsum</p>
                         </div>
-                        <div class="col-sm-4 col-md-6 baloonsLeft">
+                        <div class="col-sm-4 col-md-4 col-lg-6 baloonsLeft">
                             <img src="img/logo_books.png" alt="Book Concept | Benefits" height="70"
                                 class="pb-3 loremImgD">
                             <p class="text-uppercase font-weight-bold">lorem ipsum</p>
                         </div>
 
-                        <div class="col-sm-4 col-md-6 baloonsRight">
+                        <div class="col-sm-4 col-md-4 col-lg-6 baloonsRight">
                             <img src="img/logo_mas.png" alt="Book Concept | Benefits" height="70" class="pb-3 loremImg">
                             <p class="text-uppercase font-weight-bold">lorem ipsum</p>
                         </div>
-                        <div class="col-sm-4 col-md-6 baloonsLeft">
+                        <div class="col-sm-4 col-md-4 col-lg-6 baloonsLeft">
                             <img src="img/logo_books.png" alt="Book Concept | Benefits" height="70"
                                 class="pb-3 loremImgD">
                             <p class="text-uppercase font-weight-bold">lorem ipsum</p>
